@@ -4,6 +4,7 @@ Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
     - fix Role::ObjectMethods abstract and list_$object documentation
     - fix skipping of api.t when environment variables aren't set
     - fix stale http status code output in api_versions
+    - fix delete methods
     - use Carp::Clan for better error reporting
     - improve error reporting by falling back to the message if no error message
       is returned
